<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.jonkussmann.ribbit.ui.SignUpActivity"
                style="@style/AuthBackground">

    <include layout="@layout/auth_common"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">


    <EditText
        android:id="@+id/usernameField"
        android:hint="@string/username_hint"
        style="@style/AuthEditText"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        style="@style/AuthEditText"/>

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/emailField"
        android:hint="@string/email_hint"
        style="@style/AuthEditText"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivider"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_description_button_divider"/>

    <Button
        android:text="@string/sign_up_button_text"
        android:id="@+id/signupButton"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"/>
    <Button
        android:text="@string/cancel_button_text"
        android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonDivider"
        android:layout_marginLeft="0dp"/>
</RelativeLayout>
