<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:id="@+id/action_camera"
          android:title="@string/menu_camera_label"
          android:orderInCategory="88"
          android:showAsAction="ifRoom"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_menu_camera"/>

    <item android:id="@+id/action_edit_friends"
          android:title="@string/menu_edit_friends_label" />

    <item android:id="@+id/action_logout"
          android:title="@string/menu_logout_label"
          android:orderInCategory="100"
          android:showAsAction="never"
          app:showAsAction="never"/>
</menu>
